# src/doc/swagger-doc.yaml
@@ -3051,6 +3051,16 @@ paths:
           description: Successful response
           content:
             application/json: {}
+  /tournamentRegister/application/6790207c69aa7be5f9cf52e3:
+    get:
+      tags:
+        - Registration
+      summary: Get My application
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
   /schedule/create/6790207c69aa7be5f9cf52e3:
     post:
       tags:
